--- a/CLejiaLib/.project
+++ b/CLejiaLib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CKitchenLib</name>
+	<name>CLejiaLib</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -15,4 +15,17 @@
 		<nature>com.adobe.flexbuilder.project.flexlibnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>C:/Lively3Dlibs</location>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>LEJIALIBS</name>
+			<value>file:/C:/Lively3Dlibs</value>
+		</variable>
+	</variableList>
 </projectDescription>
